--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
     </p>
   </div>
   <div class="date-container">
-    <p>
-      <span>Year</span>
-      <span>Month</span>
-      <span>Day</span>
+    <p id="date-text">
+      <span id="year">Year</span>
+      <span id="month">Month</span>
+      <span id="day">Day</span>
     </p>
+  </div>
+  <div class="hours-till-midnight-container">
+    <span>
+      <span id="hrs"></span> hrs <span id="mins"></span> mins <span id="secs"></span> secs
+    </span>
+    <span>until midnight</span>
   </div>
 
   <script src="./Scripts/clock.js"></script>
