--- a/stopwatch.html
+++ b/stopwatch.html
@@ -23,21 +23,25 @@
   </div>
 
   <div class="stopwatch-container">
-    <span>11hr</span>
+    <span class="hours">00</span>
     :
-    <span>11min</span>
+    <span class="minutes">00</span>
     :
-    <span>11sec</span>
-    :
-    <span>11ms</span>
+    <span class="seconds">00</span>
+    
   </div>
 
   <div class="names-container">
-    <span>Hours</span>
-    <span>Minutes</span>
-    <span>Seconds</span>
-    <span>Milliseconds</span>
+    <span id="name-hour">Hours</span>
+    <span id="name-minute">Minutes</span>
+    <span id="name-second">Seconds</span>
   </div>
+
+  <div class="stop-start-container">
+    <button class="start-button">start</button>
+    <button class="stop-button">stop</button>
+  </div>
+
   <script src="Scripts/stopwatch.js"></script>
 </body>
 </html>
